# ansible-chartplotter

./: .gitignore  Makefile  README.org  provision.yml  pyproject.toml
inventories/: hosts.yml
roles/base/: README.md
roles/base/tasks/: aur.yml  entropy.yml  gpsd.yml  main.yml  nobeep.yml  ntp.yml  ranger.yml  reflector.yml  timeshift.yml  universal_packages.yml  usb.yml  usbdisks.yml  users.yml
roles/desktop/defaults/: main.yml
roles/desktop/tasks/: doctools.yml  fonts.yml  i3.yml  main.yml  music.yml  video.yml
roles/navigation/tasks/: gpsd.yml  main.yml  opencpn.yml  stellarium.yml
