[tool.poetry]
name = "iotedge-provision"
version = "0.1.0"
description = "Support environment for iotedge provisioning"
authors = ["BHP IOT Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^6.5.0"
pre-commit = "^2.20.0"
ansible-lint = "^6.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
